force-app/main/default/objects/Assessment_Template__c/fields/All_Assessments__c.field-meta.xml
<CustomField>
    <fullName>All_Assessments__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Rhythm__Assessment_Template__c/&quot;&amp;Id&amp;&quot;/related/Rhythm__Assessments__r/view&quot;, TEXT(Number_of_Assessments__c),&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Assessments</label>
    <type>Text</type>
</CustomField>