force-app/main/default/objects/Assessment_Template__c/fields/Number_of_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assessments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Assessments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>