force-app/main/default/objects/Assessment_Template__c/fields/Template_Description__c.field-meta.xml
<CustomField>
    <fullName>Template_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>