force-app/main/default/objects/Assessment_Template__c/validationRules/AssessmentforNew.validationRule-meta.xml
<ValidationRule>
    <fullName>AssessmentforNew</fullName>
    <active>true</active>
    <description>AssessmentTemplate should be created only when the Status is New not Inactive and Active</description>
    <errorConditionFormula>(ISNEW()  &amp;&amp; ((ISPICKVAL(Status__c, &apos;Active&apos;) )   ||   (ISPICKVAL(Status__c, &apos;Inactive&apos;))))</errorConditionFormula>
    <errorMessage>Status should be &apos;New&apos; while creating a template</errorMessage>
</ValidationRule>