force-app/main/default/objects/Assessment_Template__c/validationRules/Restrict_Duplicate_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Duplicate_Template</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),VLOOKUP($ObjectType.Assessment_Template__c.Fields.Name,$ObjectType.Assessment_Template__c.Fields.Name, Name ) == Name)</errorConditionFormula>
    <errorMessage>Template exists with the same name already, try using a different name.</errorMessage>
</ValidationRule>